syntax = "proto3";
package cards;

service CardsService {
  rpc CreateCard(CreateCardRequest) returns (Card) {}
  rpc GetCard(GetCardRequest) returns (Card) {}
  rpc UpdateCard(UpdateCardRequest) returns (Card) {}
  rpc DeleteCard(DeleteCardRequest) returns (DeleteCardResponse) {}
}

message Card {
  string id = 1;
  string cardName = 2;
  string number = 3;
  int32 expMonth = 4;
  int32 expYear = 5;
  string cvc = 6;
  string cardType = 7;
  string type = 8;
  string userId = 9;
}

message CreateCardRequest {
  string cardName = 1;
  string number = 2;
  int32 expMonth = 3;
  int32 expYear = 4;
  string cvc = 5;
  string cardType = 6;
  string type = 7;
  string userId = 8;
}

message GetCardRequest {
  string id = 1;
}

message UpdateCardRequest {
  string id = 1;
  optional string cardName = 2;
  optional string number = 3;
  optional int32 expMonth = 4;
  optional int32 expYear = 5;
  optional string cvc = 6;
  optional string cardType = 7;
  optional string type = 8;
  optional string userId = 9;
}

message DeleteCardRequest {
  string id = 1;
}
message DeleteCardResponse {}