syntax="proto3";
package Orders;

service OrdersService {
  rpc CreateOrder(CreateOrderRequest) returns(Order) {}
  rpc GetOrder(GetOrderRequest) returns(Order) {}
}

message Items {
  string movieId = 1;
  float unitPrice = 2;
}

message PaymentStatus {
  enum Status {
    PENDING = 0;
    PROCESSING = 1;
    SUCCEEDED = 2;
    FAILED = 3;
  }
}

message Order {
  string id = 1;
  string userId = 2;
  string cardId = 3;
  float totalAmount = 4;
  PaymentStatus paymentStatus = 5;
  repeated Items items = 6;
  string createdAt = 7;
}

message CreateOrderRequest {
  string userId = 2;
  string cardId = 3;
  float totalAmount = 4;
  PaymentStatus paymentStatus = 5;
  repeated Items items = 6;
  string createdAt = 7;
}

message GetOrderRequest {
  string id = 1;
}
